k8s/manifests/simple/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-pod
  labels:
    app: simple
spec:
  containers:
    - name: echo-bar
      image: hashicorp/http-echo
      args:
        - "-text=simple"
      ports:
        - containerPort: 5678
