k8s/manifests/simple/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  simple-service
spec:
  type: NodePort
  selector:
    app: simple
  ports:
  - name:  http
    port:  80
    targetPort:  5678
