k8s/manifests/simple/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: local.mrk1debian
      http:
        paths:
          - path: /simple
            pathType: Prefix
            backend:
              service:
                name: simple-service
                port:
                  number: 80
